Add inputItem component styled

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,7 @@ main {
     margin-bottom: 1.5rem;
   }
 
-  .add-btn {
+  .main-add-btn {
     margin: 1rem 0;
     border: none;
     width: 100%;
