--- a/src/FormItem/FormItem.scss
+++ b/src/FormItem/FormItem.scss
@@ -1,16 +1,19 @@
-.input-item-container {
+.form-item-container {
   box-sizing: border-box;
-  margin: 1rem;
+  z-index: 1;
+  position: fixed;
   padding: 1rem 2rem;
-  max-width: 420px;
+  width: 100%;
   min-height: 200px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: start;
+  max-width: 420px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
   background-color: white;
   border-radius: 0.3rem;
-  box-shadow: 0 4px 4px 4px rgba(0, 0, 0, 0.03);
+  box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.1);
 
   h2 {
     font-size: 2rem;
@@ -29,7 +32,7 @@
     border-radius: inherit;
 
     &:focus {
-      border: 2px solid #01a8ff;
+      border-color: #01a8ff;
     }
   }
 
@@ -47,10 +50,8 @@
       color: white;
       background-color: #01a8ff;
       border-radius: 0.2rem;
-      transition: all 0.3s;
 
       &:hover {
-        opacity: 0.8;
         cursor: pointer;
       }
 
@@ -59,9 +60,37 @@
       }
     }
 
+    .add-btn:hover {
+      background-color: #01a6ffb9;
+    }
+
     .close-btn {
       background-color: #dddddd;
       color: black;
+
+      &:hover {
+        background-color: #ddddddaf;
+      }
     }
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+.active {
+  display: block;
+  animation: scaleUp 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+}
+
+@keyframes scaleUp {
+  0% {
+    transform: scale(0.8) translateY(800px);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1) translate(-50%, -50%);
+    opacity: 1;
   }
 }
