Add function to delete items

--- a/src/SuperMarketList/SuperMarketList.scss
+++ b/src/SuperMarketList/SuperMarketList.scss
@@ -94,6 +94,11 @@
     &:focus {
       border-color: #01a8ff;
     }
+
+    &::placeholder {
+      font-size: 1rem;
+      letter-spacing: 0.1rem;
+    }
   }
 
   .btn-container {
